# BlitEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt
Engine/Include/: HelloWorld.h
Engine/Src/: HelloWorld.cpp
Game/: CMakeLists.txt
Game/Src/: main.cpp
Scripts/: compile.bat  compile.sh  setup.bat  setup.sh
